# api/src/main/java/dev/thiagooliveira/bankhub/domain/dto/CreateTransactionInput.java
@@ -2,7 +2,6 @@ package dev.thiagooliveira.bankhub.domain.dto;
 
 import java.math.BigDecimal;
 import java.time.OffsetDateTime;
-import java.util.Optional;
 import java.util.UUID;
 
 public record CreateTransactionInput(
@@ -10,7 +9,7 @@ public record CreateTransactionInput(
     UUID organizationId,
     OffsetDateTime dateTime,
     String description,
-    Optional<UUID> categoryId,
+    UUID categoryId,
     BigDecimal amount) {
 
   public CreateTransactionEnrichedInput enrichWith(UUID categoryId) {
